--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>curso.api.rest</groupId>
 	<artifactId>curso_spring_rest_api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>curso_spring_rest_api</name>
 	<description>curso_spring_rest_api</description>
 	<properties>
